# DecisionDrift

./: .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  ROADMAP.md  action.yml  debug_bootstrap.py  decisiondrift_demo.cast  generate_demo.py  pyproject.toml
.github/workflows/: ci.yml  demo.yml
benchmarks/: adversarial.yaml  benchmark_runner.py  bootstrap.yaml
benchmarks/expected/: django-sample.json  express-sample.json  fastapi-sample.json  flask-sample.json  go-sample.json
benchmarks/repos/django-sample/: manage.py  requirements.txt
benchmarks/repos/express-sample/: package.json
benchmarks/repos/fastapi-sample/: pyproject.toml
benchmarks/repos/flask-sample/: requirements.txt
benchmarks/repos/go-sample/: go.mod  main.go
docs/: architecture.md  bootstrap-benchmark.md  cli-reference.md  contributing.md  evaluation.md  faq.md  json-schema-v1.md  plan.md  progress.md  quickstart.md  report-schema-v1.json
extensions/vscode-decisiondrift/: .eslintrc.json  .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  vscode-decisiondrift-0.1.0.vsix
extensions/vscode-decisiondrift/src/: cli.ts  commands.ts  diagnostics.ts  extension.ts  sidebar.ts
repos/adversarial/dockerfile-no-service/: Dockerfile  processor.py  setup.py
repos/adversarial/flask-tests-only/: pyproject.toml
repos/adversarial/framework-impl-deps/: pyproject.toml
repos/adversarial/frontend-docs-only/: package.json
repos/adversarial/library-with-fastapi-examples/: pyproject.toml
repos/adversarial/redis-optional-only/: pyproject.toml
repos/adversarial/sdk-optional-db/: pyproject.toml
repos/hospital-management-system-V2/: .gitignore  CELERY_SETUP_GUIDE.md  README.md  api.yaml  issues.txt  manage.py  requirements.txt  run.py  seed_doctors.py
repos/hospital-management-system-V2/backend/: __init__.py  celery_worker.py  config.py  extensions.py
repos/hospital-management-system-V2/frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: clone_benchmark_repos.py  generate_adversarial_repos.py  generate_benchmark_fixtures.py  generate_eval_report.py  run_bootstrap_benchmark.py
src/decisiondrift/: cli.py  config.py
src/decisiondrift.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/decisiondrift/adr/: dedup.py  id_allocator.py  loader.py  parser.py  rule_generator.py  supersession.py  writer.py
src/decisiondrift/adr_manager/: commands.py
src/decisiondrift/bootstrap/: architecture.py  bootstrapper.py  cache.py  candidate_generator.py  default_registry.yaml  detectors.py  knowledge_provider.py  patterns.py  registry.py  structure_scan.py  suggester.py  synthesis.py  template_generator.py  v3.py
src/decisiondrift/classification/: classifier.py  models.py  prompts.py
src/decisiondrift/github/: action_entrypoint.py  client.py  comment_manager.py
src/decisiondrift/impact/: ast_python.py  ast_treesitter.py  diff_parser.py  language_registry.py  models.py  reference_scan.py  service.py
src/decisiondrift/ingest/: __init__.py  extractor.py  segmenter.py  service.py
src/decisiondrift/init/: service.py
src/decisiondrift/llm/: __init__.py  client.py
src/decisiondrift/models/: schema.py
src/decisiondrift/report/: compiler.py  formatter.py  github_formatter.py
src/decisiondrift/retrieval/: backend.py  embedding.py  keyword.py  models.py
src/decisiondrift/review/: service.py
src/decisiondrift/rules/: engine.py  models.py  scanner.py
src/decisiondrift/utils/: dependency_parser.py
tests/: conftest.py  test_ast_python.py  test_bootstrap_bootstrapper.py  test_bootstrap_candidates.py  test_bootstrap_patterns.py  test_bootstrap_structure_scan.py  test_bootstrap_v2.py  test_bootstrap_v3.py  test_classification.py  test_cli_audit.py  test_cli_bootstrap.py  test_cli_enforce.py  test_cli_ingest.py  test_diff_parser.py  test_llm_client.py  test_reference_scan.py  test_report_compiler.py  test_retrieval_accuracy.py  test_retrieval_keyword.py  test_rule_generator.py  test_rules_engine.py  test_rules_models.py  test_rules_scanner.py  test_service.py
tests/apexs_evaluation/: expectations.yaml  test_apexs_evaluation.py
tests/apexs_evaluation/patches/: apirouter_valid.diff  apirouter_valid.patch  apirouter_violation.diff  apirouter_violation.patch  docker_valid.diff  docker_valid.patch  docker_violation.diff  docker_violation.patch  fastapi_valid.diff  fastapi_valid.patch  fastapi_violation.diff  fastapi_violation.patch  (+6 more)
tests/data/: queries.yaml
tests/evaluation/: expectations.yaml  test_evaluation.py  test_evaluation_metrics.py
tests/integration/: test_audit_flow.py  test_bootstrap_flow.py  test_enforce_flow.py  test_impact_flow.py  test_ingest_flow.py  test_review_flow.py
tests/sample_repos/: flask_repo.py
tests/snapshots/: test_cli_audit.py  test_cli_bootstrap.py  test_cli_enforce.py  test_cli_ingest.py
tests/unit/: test_adr_manager.py  test_ast_treesitter.py  test_bootstrap.py  test_cache.py  test_confidence.py  test_duplicate_detection.py  test_ingest.py  test_knowledge_provider.py  test_registry.py  test_rule_engine.py
(+117 files in other folders)
