[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decisiondrift"
version = "0.1.0"
description = "Decision-aware AI PR review agent"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3.0",
    "numpy>=1.24",
]

[project.urls]
Source = "https://github.com/org/decisiondrift"

[project.scripts]
decisiondrift = "decisiondrift.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
