[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decisiondrift"
version = "1.0.0-beta.3"
description = "Deterministic-first decision governance — codify architecture decisions as enforceable rules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Madhan Karthikeyan", email = "hello@madhankarthikeyan.com"},
]
keywords = ["adr", "architecture-decision-records", "lint", "code-review", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "build>=1.0",
    "coverage>=7.0",
    "mypy>=2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "ruff>=0.5.0",
    "syrupy>=4.0",
]
embeddings = [
    "fastembed>=0.3.0",
    "numpy>=1.24",
]
ast = [
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0"
]

[project.urls]
Source = "https://github.com/madhan-karthikeyan/DecisionDrift"

[project.scripts]
decisiondrift = "decisiondrift.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["repos/", "benchmarks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --ignore=tests/evaluation --ignore=tests/apexs_evaluation --ignore=tests/benchmarks"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (use temp repos, no network)",
    "snapshot: CLI snapshot tests (uses syrupy)",
]

[tool.coverage.run]
source = ["decisiondrift"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/egg-info/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.coverage.html]
directory = "coverage_html"

